# readrs

./: .gitignore  BUG_RECORD.md  BUILD.md  Cargo.toml  PROJECT_STRUCTURE.md  README.md  SETUP_WINDOWS.md  STAGE1_COMPLETE.md  STAGE2_COMPLETE.md  STAGE3_COMPLETE.md  STAGE4_COMPLETE.md  VERIFICATION.md  commit_history.txt  prototype.html
src/: editor.rs  export.rs  features.rs  file_manager.rs  lib.rs  main.rs  preview.rs  renderer.rs  theme.rs
src/editor/: mod.rs  syntax_highlight.rs  text_editor.rs
src/file_manager/: file_operations.rs  file_tree.rs  mod.rs  search.rs
src/markdown/: latex_renderer.rs  mermaid_renderer.rs  mod.rs  parser.rs
src/preview/: html_renderer.rs  mod.rs  renderer.rs
