[package]
name = "readrs"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2"
pulldown-cmark = "0.11"
pulldown-cmark-to-cmark = "13.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }